@@ -278,8 +278,7 @@ scimat_load.m
 	
 scimat_save.m
 
-	 SCIMAT_SAVE  Save a SCIMAT struct to a Matlab or MetaImage format that
-	 can be imported by Seg3D and Seg3D2.
+	 SCIMAT_SAVE  Save a SCIMAT struct to several file formats.
 	
 scimat_seg3d2matlab.m
 
